@@ -13,6 +13,7 @@ class Group0001Test extends SeleniumJoomlaTestCase
 	function testCreatDeleteGroup()
 	{
   	$this->setUp();
+	$this->gotoAdmin();  	
   	$this->doAdminLogin();
     $this->click("link=Groups");
     $this->waitForPageToLoad("30000");  	
